// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DecidedLandingPage /> component Redirects to login page when logged out 1`] = `
<DecidedLandingPage
  isLoggedIn={false}
>
  <Redirect
    push={false}
    to="/login"
  />
</DecidedLandingPage>
`;

exports[`<DecidedLandingPage /> component Redirects to orders list when logged in 1`] = `
<DecidedLandingPage
  isLoggedIn={true}
>
  <Redirect
    push={false}
    to="/my_orders"
  />
</DecidedLandingPage>
`;
